--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 lib_deps =
     WiFi
     PubSubClient
-    NTPClient
+    arduino-libraries/NTPClient@^3.2.1
+    TaskScheduler
