--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .pio
+
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
@@ -10,5 +11,7 @@ mosquitto/config/*
 mosquitto/data/
 mosquitto/log/
 
-config/*
-!config/*-template
+# configuration file (see config/config.h-template)
+config/config.h
+
+media/drawio/*.bkp
