--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,10 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+build_flags = -Wno-pragmas
 lib_deps =
     WiFi
+    FastLED
     PubSubClient
-    arduino-libraries/NTPClient@^3.2.1
     TaskScheduler
+    arduino-libraries/NTPClient@^3.2.1
