--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ build_flags = -Wno-pragmas
 lib_deps =
     WiFi
     FastLED
-    PubSubClient
+    AsyncTCP
     TaskScheduler
     arduino-libraries/NTPClient@^3.2.1
+    https://github.com/bertmelis/espMqttClient.git
