--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 build_flags = -Wno-pragmas
 lib_deps =
     WiFi
-    FastLED@3.6.0wip
+    FastLED@3.6.0
     AsyncTCP
     TaskScheduler
     arduino-libraries/NTPClient@^3.2.1
